--- a/complete/stepx/index.html
+++ b/complete/stepx/index.html
@@ -6,6 +6,7 @@
         <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1">
 
         <title>WebRTC codelab: step X</title>
+        <link rel="stylesheet" href="css/main.css">
     </head>
     <body>
         <h1>WebRTC codelab: step X</h1>
@@ -15,10 +16,20 @@
             <code id="url">...</code>
         </p>
 
-        <video style="width: 320px" autoplay></video>
-        <p><button id="snap">snap</button></p>
-        <canvas id="photo" style="width: 200px; height: 150px; border: 1px solid #ccc;"></canvas>
-        <p><button id="send">send</button></p>
+        <video class="camera" autoplay></video>
+        <div class="controls">
+            <canvas id="photo" style="width: 200px; height: 150px; border: 1px solid #ccc;"></canvas>
+            <p>
+                <button id="snap">snap</button>-then-<button id="send">send</button> 
+                <br> - or - <br>
+                <button id="snapAndSend">snap & send</button>
+            </p>
+        </div>
+
+        <div class="incoming">
+            <h2>Incoming photos</h2>
+            <div id="trail"></div>
+        </div>
 
         <script src="/socket.io/socket.io.js"></script>
         <script src="js/lib/adapter.js"></script>
